# hwsd

./: .gitexternals  .gitignore  .gitsubprojects  .travis.yml  CMakeLists.txt  GNUmakefile  LICENSE.txt  Makefile  README.md
CMake/: CPackConfig.cmake  FindGPUSD.cmake  FindPackages.cmake  FindRequired.cmake  UploadPPA.cmake  hwsd.cmake
apps/: CMakeLists.txt
apps/gpu_sd/: CMakeLists.txt  gpu_sd.cpp
apps/gpu_sd_list/: CMakeLists.txt
apps/hw_sd/: CMakeLists.txt  hw_sd.cpp
apps/hw_sd_list/: CMakeLists.txt  hw_sd_list.cpp
doc/: AUTHORS  CMakeLists.txt  Changelog.md  Doxyfile  RelNotes.dox  RelNotes.md  doxyfooter.html
hwsd/: CMakeLists.txt  api.h  filter.cpp  filter.h  functions.cpp  functions.h  gpuInfo.cpp  gpuInfo.h  hwsd.cpp  hwsd.h  module.cpp  module.h  module.ipp  netInfo.cpp  netInfo.h  nodeInfo.cpp  nodeInfo.h  types.h  version.cpp  version.in.h
hwsd/detail/: dns_sd_module.h
hwsd/gpu/: CMakeLists.txt  filter.cpp  filter.h  gpuInfo.h  module.cpp  module.h  types.h
hwsd/gpu/cgl/: CMakeLists.txt  module.cpp  module.h
hwsd/gpu/dns_sd/: CMakeLists.txt  module.cpp  module.h
hwsd/gpu/glx/: CMakeLists.txt  module.cpp  module.h
hwsd/gpu/wgl/: CMakeLists.txt  module.cpp  module.h
hwsd/net/: CMakeLists.txt
hwsd/net/dns_sd/: CMakeLists.txt  module.cpp  module.h
hwsd/net/hwloc/: CMakeLists.txt  module.cpp  module.h
hwsd/net/sys/: CMakeLists.txt  module.cpp  module.h
libs/gpusd/: CMakeLists.txt  gpuInfo.h
libs/gpusd/cgl/: CMakeLists.txt
libs/gpusd/dns_sd/: CMakeLists.txt  module.cpp  module.h
libs/gpusd/glx/: CMakeLists.txt  module.cpp  module.h
libs/gpusd/wgl/: CMakeLists.txt  module.cpp
scripts/: hw_sd.sbatch
tests/: CMakeLists.txt
