
set(LINK_LIBRARIES hwsd)
if(OPENGL_FOUND)
  if(APPLE)
    add_definitions(-DHWSD_GPU_CGL)
    list(APPEND LINK_LIBRARIES hwsd_gpu_cgl)
  endif()
  if(X11_FOUND)
    add_definitions(-DHWSD_GPU_GLX)
    list(APPEND LINK_LIBRARIES hwsd_gpu_glx)
  endif()
  if(WIN32)
    add_definitions(-DHWSD_GPU_WGL)
    list(APPEND LINK_LIBRARIES hwsd_gpu_wgl ws2_32)
  endif()
endif()

add_subdirectory(hw_sd)
add_subdirectory(hw_sd_list)
